--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,17 @@
   width: 100%;
   text-align: center;
 }
+
+.toggle.react-toggle--checked .react-toggle-track {
+  background-color: #0b3d91 !important;
+  border-color: #0b3d91 !important;
+}
+
+.toggle.react-toggle--checked .react-toggle-track:hover {
+  background-color: #5e0b8e !important;
+  border-color: #5e0b8e !important; /* Opcional: si también deseas cambiar el color del borde en hover */
+}
+
+.react-toggle--checked .react-toggle-thumb {
+  border-color: #0b3d91 !important;
+}
